--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -29,18 +29,15 @@
                     android:onClick="onClick"
                     android:fontFamily="@font/nanumsquare_light"/>
 
-                <Button
+                <ImageButton
                     android:id="@+id/profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:background="@color/bg"
-                    android:text="^_^"
-                    android:textColor="@android:color/white"
-                    android:textSize="15pt"
+                    android:src="@drawable/blue"
+                    android:adjustViewBounds="true"
                     android:onClick="onClick"
-                    android:fontFamily="@font/nanumsquare_light"/>
-
+                    android:background="@drawable/round"/>
             </RelativeLayout>
 
             <LinearLayout
