--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -25,17 +25,16 @@ android:layout_height="match_parent">
                 android:fontFamily="@font/nanumsquare_light"
                 android:onClick="onClick"/>
 
-            <Button
+            <ImageButton
                 android:id="@+id/profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:background="@color/bg"
-                android:text="^_^"
-                android:textColor="@android:color/white"
-                android:textSize="15pt"
-                android:fontFamily="@font/nanumsquare_light"
-                android:onClick="onClick"/>
+                android:src="@drawable/blue"
+                android:adjustViewBounds="true"
+                android:onClick="onClick"
+                android:background="@drawable/round"/>
+
 
         </RelativeLayout>
 
