--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,26 +15,24 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <ImageButton
                 android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="back"
-                android:background="@color/bg"
-                android:textColor="@android:color/white"
-                android:textSize="15pt"
-                android:fontFamily="@font/nanumsquare_light"
-                android:onClick="onClick"/>
+                android:layout_margin="10dp"
+                android:src="@drawable/backicon"
+                android:onClick="onClick"
+                android:background="#00000000"/>
 
             <ImageButton
                 android:id="@+id/profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:src="@drawable/blue"
-                android:adjustViewBounds="true"
+                android:layout_margin="10dp"
+                android:src="@drawable/person"
                 android:onClick="onClick"
-                android:background="@drawable/round"/>
+                android:background="#00000000"/>
           
         </RelativeLayout>
 
