--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -18,26 +18,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <Button
+                <ImageButton
                     android:id="@+id/back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/bg"
-                    android:text="back"
-                    android:textColor="@android:color/white"
-                    android:textSize="15pt"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/backicon"
                     android:onClick="onClick"
-                    android:fontFamily="@font/nanumsquare_light"/>
+                    android:background="#00000000"/>
 
                 <ImageButton
                     android:id="@+id/profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:src="@drawable/blue"
-                    android:adjustViewBounds="true"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/person"
                     android:onClick="onClick"
-                    android:background="@drawable/round"/>
+                    android:background="#00000000"/>
+
             </RelativeLayout>
 
             <LinearLayout
