--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -93,14 +93,13 @@
                     android:textSize="8pt"
                     android:fontFamily="@font/nanumsquare_light"/>
 
-                <Button
+                <ImageButton
                     android:id="@+id/btn_edit"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentRight="true"
-                    android:text="/"
                     android:onClick="onClick"
-                    android:fontFamily="@font/nanumsquare_light"/>
+                    android:src="@drawable/editicon"/>
               
                 <TextView
                     android:id="@+id/score_attendance"
