--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -45,9 +45,10 @@
                 android:background="@color/bg">
 
                 <TextView
+                    android:id="@+id/textView_lectureName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="알고리즘"
+                    android:text="(수업명)"
                     android:textSize="20pt"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"
