교수 강의 목록(ProfLectureActivtiy), 교수 마이페이지(ProfMypageActivity) 업데이트

--- a/app/src/main/res/layout/activity_profmypage.xml
+++ b/app/src/main/res/layout/activity_profmypage.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -85,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
-            android:text="학과: "
+            android:text="소속: "
             android:textColor="@color/bg"
             android:textSize="25sp"
             android:gravity="right"
@@ -93,7 +92,7 @@
             android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
-            android:id="@+id/student_major"
+            android:id="@+id/prof_major"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -114,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
-            android:text="학번: "
+            android:text="교번: "
             android:textColor="@color/bg"
             android:textSize="25sp"
             android:gravity="right"
@@ -122,7 +121,7 @@
             android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
-            android:id="@+id/student_number"
+            android:id="@+id/prof_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -151,7 +150,7 @@
             android:fontFamily="@font/nanumsquare_light"/>
 
         <TextView
-            android:id="@+id/student_name"
+            android:id="@+id/prof_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -183,4 +182,3 @@
             android:onClick="onClick"/>
     </LinearLayout>
 </LinearLayout>
-
