--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
             android:id="@+id/id"
             android:layout_width="250dp"
             android:layout_height="40dp"
-            android:hint="학번을 입력하세요"
+            android:hint="학번 또는 교번"
             android:textSize="20dp"
             android:inputType="number"
             android:singleLine="true"
